--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -79,6 +79,9 @@
     <Compile Include="Views\ContentViews\Appstimmen\AppStimmerButtonsView.xaml.cs">
       <DependentUpon>AppStimmerButtonsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\VideoAttachmentView.xaml.cs">
+      <DependentUpon>VideoAttachmentView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ContentViews\AppStimmerEditor\AppStimmerEditorTabbedView.xaml.cs">
       <DependentUpon>AppStimmerEditorTabbedView.xaml</DependentUpon>
     </Compile>
@@ -451,7 +454,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Icons\cross.svg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ContentViews\AppStimmerEditor\Attachments\VideoAttachmentView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Icons\info_blue_circle.scale-100.png" />
   </ItemGroup>
