--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
@@ -2,5 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.MSO.AppStimmer" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="24" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:label="@string/app_name"></application>
 </manifest>
