--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -12,6 +12,8 @@
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
+  <package id="Plugin.MediaManager" version="0.4.5" targetFramework="xamarinios10" />
+  <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="xamarinios10" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
