--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -8,6 +8,8 @@
   <package id="MvvmLight" version="5.3.0.0" targetFramework="portable46-net451+win81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable46-net451+win81" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable46-net451+win81" />
+  <package id="Plugin.MediaManager" version="0.4.5" targetFramework="portable46-net451+win81" />
+  <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="portable46-net451+win81" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="portable46-net451+win81" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable46-net451+win81" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable46-net451+win81" />
