--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -21,6 +21,7 @@
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="portable46-net451+win81" />
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable46-net451+win81" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="portable46-net451+win81" />
+  <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
