--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
@@ -5,5 +5,5 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<application android:label="@string/app_name"></application>
+	<application android:label="@string/app_name" android:icon="@drawable/thumbs_up"></application>
 </manifest>
