--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
@@ -5,5 +5,16 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<application android:label="@string/app_name" android:icon="@drawable/thumbs_up"></application>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<application android:label="@string/app_name" android:icon="@drawable/thumbs_up">
+		<provider android:name="android.support.v4.content.FileProvider" 
+              android:authorities="com.companyname.MSO.AppStimmer.fileprovider" 
+              android:exported="false" android:grantUriPermissions="true">
+		  <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+		             android:resource="@xml/file_paths">
+        
+      </meta-data>
+    </provider>
+	</application>
 </manifest>
