--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -12,8 +12,10 @@
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Plugin.MediaManager" version="0.4.5" targetFramework="monoandroid70" />
   <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="monoandroid70" />
+  <package id="Plugin.Permissions" version="2.0.1" targetFramework="monoandroid70" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid70" />
   <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid71" />
@@ -73,6 +75,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="monoandroid71" />
+  <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
