--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -74,6 +74,7 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="xamarinios10" />
