--- a/src/MSO.AppStimmer/MSO.Common/MSO.Common.csproj
+++ b/src/MSO.AppStimmer/MSO.Common/MSO.Common.csproj
@@ -38,6 +38,7 @@
     <Compile Include="ListExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelper.cs" />
+    <Compile Include="WebHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Akavache, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
