--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -26,6 +26,10 @@
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.0" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.Core" version="15.4.0.20" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.DataSource" version="15.4.0.20" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.GridCommon" version="15.4.0.20" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.SfListView" version="15.4.0.20" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
