--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -20,6 +20,10 @@
   <package id="Splat" version="1.6.0" targetFramework="portable46-net451+win81" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="portable46-net451+win81" />
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable46-net451+win81" />
+  <package id="Syncfusion.Xamarin.Core" version="15.4.0.20" targetFramework="portable46-net451+win81" />
+  <package id="Syncfusion.Xamarin.DataSource" version="15.4.0.20" targetFramework="portable46-net451+win81" />
+  <package id="Syncfusion.Xamarin.GridCommon" version="15.4.0.20" targetFramework="portable46-net451+win81" />
+  <package id="Syncfusion.Xamarin.SfListView" version="15.4.0.20" targetFramework="portable46-net451+win81" />
   <package id="VG.XFShapeView" version="1.0.5" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugin.Media" version="3.0.1" targetFramework="portable46-net451+win81" />
   <package id="Xam.Plugins.Forms.DeviceOrientation" version="1.0.1" targetFramework="portable46-net451+win81" />
