--- a/src/MSO.AppStimmer/MSO.AppStimmer.Core/MSO.StimmApp.Core.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer.Core/MSO.StimmApp.Core.csproj
@@ -34,12 +34,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AkavacheSqliteLinkerOverride.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Enums\AppStimmerEditorDisplayType.cs" />
     <Compile Include="Enums\AttachmentType.cs" />
     <Compile Include="Enums\ModelEditFinishedType.cs" />
     <Compile Include="Helpers\ColorThemes.cs" />
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Helpers\TaskHelper.cs" />
+    <Compile Include="Messages\AppStimmerAttachmentAddedMessage.cs" />
     <Compile Include="Models\AppStimmer.cs" />
     <Compile Include="Models\AppStimmerAttachment.cs" />
     <Compile Include="Models\AppStimmerUser.cs" />
